--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <div id="top">
 
-      <h1> Jordan <span class="name">top</span> Lieber </h1>
-      <h2> Website </h2>
+      <h1> Jordan2 <span class="name">top</span> Lieber </h1>
+      <h2> Website2 </h2>
+      <h2> New thing for website</h2>
 
     </div>
 
