added new h2 testing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <h1> Jordan <span class="name">top</span> Lieber </h1>
       <h2> Website </h2>
+      <h2>testing new freature</h2>
 
     </div>
 
