--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <h1> Jordan22 <span class="name">top</span> Lieber </h1>
       <h2> Website22 </h2>
       <h2> Anotther feature testing fetch </h2>
+      <h2> testing git pull </h2>
       
 
     </div>
